<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.toyide.csci3130_project.ProfileFragment" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <!-- TODO: Update blank fragment layout -->


        <TextView
            android:id="@+id/Bnumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/oldpass"
            android:layout_alignBottom="@+id/oldpass"
            android:layout_centerHorizontal="true"
            android:text="B00692432"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/state"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewAntoNieva" />

        <TextView
            android:id="@+id/department"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newpass"
            android:layout_centerHorizontal="true"
            android:text="Faculty of Computer Science"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/state"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewAntoNieva" />

        <TextView
            android:id="@+id/level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/newpass"
            android:layout_alignBottom="@+id/newpass"
            android:layout_centerHorizontal="true"
            android:text="Undergraduate"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/university"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Bnumber" />

        <TextView
            android:id="@+id/university"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/oldpass"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="21dp"
            android:text="Dalhousie University"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/state"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/level" />


        <TextView
            android:id="@+id/oldpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/oldpass"
            android:layout_alignBottom="@+id/oldpass"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="19dp"
            android:layout_marginStart="19dp"
            android:text="Old password"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/info"
            app:layout_constraintEnd_toStartOf="@+id/oldpass"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/oldpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/state"
            android:layout_alignStart="@+id/state"
            android:layout_below="@+id/viewAntoNieva"
            android:layout_marginTop="54dp"
            android:text= ""
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/oldpassword"
            app:layout_constraintTop_toBottomOf="@+id/Bnumber" />

        <TextView
            android:id="@+id/newpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/oldpassword"
            android:layout_alignStart="@+id/oldpassword"
            android:layout_below="@+id/oldpass"
            android:layout_marginTop="53dp"
            android:text="New password"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/info"
            app:layout_constraintEnd_toStartOf="@+id/newpass"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/oldpassword" />

        <Button
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/pass"
            android:layout_alignBottom="@+id/pass"
            android:layout_alignLeft="@+id/pass"
            android:layout_alignStart="@+id/pass"
            android:text="Confirm"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/state"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/state"
            android:layout_alignBottom="@+id/state"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="Password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/state"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="102dp"
            android:text="Info"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/newpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/newpassword"
            android:layout_alignBottom="@+id/newpassword"
            android:layout_alignLeft="@+id/oldpass"
            android:layout_alignStart="@+id/oldpass"
            android:ems="10"
            android:inputType="textPassword"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/newpassword"
            app:layout_constraintTop_toBottomOf="@+id/oldpass" />

        <Button
            android:id="@+id/state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/info"
            android:layout_alignBottom="@+id/info"
            android:layout_centerHorizontal="true"
            android:text="State"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/pass"
            app:layout_constraintStart_toEndOf="@+id/info"
            app:layout_constraintTop_toBottomOf="@+id/Bnumber" />

        <TextView
            android:id="@+id/viewAntoNieva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:text="NAME"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.197" />

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/info"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="BACK"
            android:visibility="invisible" />


    </RelativeLayout>
    <![CDATA[

    >
]]>
</FrameLayout>