<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_assignment_ind_black_24dp"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/ic_date_range_black_24dp"
        android:title="@string/title_schedule" />

    <item
        android:id="@+id/navigation_register"
        android:icon="@drawable/ic_queue_black_24dp"
        android:title="@string/title_register" />

</menu>
